# Parser-v2.vost.pw

./: README.md  anime_list.csv  parser.py  pyproject.toml
