[tool.poetry]
name = "parser-v2-vost-pw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "parser_v2"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
bs4 = "^0.0.1"
pandas = "^1.5.3"
openpyxl = "^3.1.0"
xlsxwriter = "^3.0.8"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
